# sezi-server28

./: .dev.vars.example  .gitignore  Cargo.toml  README.md  wrangler.toml
migrations/: 0001_init.sql  0002_push_tokens.sql  0003_admin_and_settings.sql  0004_owner_and_invite_tracking.sql  0005_retention.sql  0006_groups.sql  0007_group_settings.sql  0008_group_join_consent.sql  0009_turn_usage.sql  0010_message_retention.sql  0011_devices.sql  0012_device_addressing_s1.sql  0013_device_otk_cut.sql  0014_device_link.sql  0015_signed_prekeys_device_pk.sql  0016_otk_device_unique.sql  0017_device_list_highwater.sql  0018_one_owner.sql  0019_plugin_epoch_floor.sql  0020_push_wake_debounce.sql  0021_fanout_retry.sql  0022_quotas.sql  0023_quota_caps.sql  0024_cf_config.sql  0025_server_config.sql
src/: cf_analytics.rs  d1util.rs  groups.rs  lib.rs  maintenance.rs  plugin_blob.rs  plugin_log.rs  quota.rs  ratelimit.rs  respond.rs  self_provision.rs  storage.rs  turn.rs  usage.rs  utils.rs  welcome.rs
src/admin/: cf_config.rs  fcm_config.rs  handlers.rs  mod.rs  stats.rs
src/auth/: bootstrap.rs  hashing.rs  invite.rs  jwt.rs  me.rs  middleware.rs  mod.rs  refresh.rs  relogin.rs  verify.rs
src/devices/: handlers.rs  link.rs  mod.rs
src/email/: mailer.rs
src/keys/: handlers.rs
src/media/: handlers.rs
src/messages/: handlers.rs  mod.rs
src/messages/inbox_do/: forward.rs  message.rs  mod.rs  receipt.rs  self_read.rs  ws.rs
src/push/: fcm.rs  handlers.rs  mod.rs
src/server/: handlers.rs
